# MeisenMeister

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  train_overfit.py
data/: __init__.py  augmentation.py
docs/: cli.md  overview.md  pipeline.md  setup.md  training.md
meisenmeister/: __init__.py  cli.py
meisenmeister/architectures/: __init__.py  base_architecture.py  nnunet_encoder.py  primus.py  registry.py  resnet3d.py
meisenmeister/data_augmentations/: __init__.py  appearance.py  compose.py  noise.py  spatial_transforms.py  torchio_transforms.py
meisenmeister/dataloading/: __init__.py  dataset.py
meisenmeister/dataset_conversion/: odelia.py
meisenmeister/plan_and_preprocess/: __init__.py  create_breast_seg.py  extract_dataset_fingerprint.py  homogenize.py  plan_and_preprocess.py  plan_experiment.py  preprocess.py  preprocessing_utils.py
meisenmeister/training/: __init__.py  base_trainer.py  benchmark.py  evaluate_predictions.py  predict.py  prediction_pipeline.py  preview_da.py  registry.py  splits.py  train.py
meisenmeister/training/trainers/: __init__.py  debug_trainer.py  mm_trainer.py
meisenmeister/training/trainers/networks/: __init__.py  primus.py  (+1 more)
meisenmeister/utils/: __init__.py  file_utils.py  path_utils.py  prediction_inference.py  prediction_utils.py
meisenmeister/utils/training/: __init__.py  artifacts.py  checkpoints.py  dataloading.py  evaluation.py  grad_cam.py  metrics.py  performance.py
models/: __init__.py  base_model.py  residual_encoder_classifier.py
tests/: test_architectures.py  test_cli.py  test_create_breast_seg.py  test_data_augmentations.py  test_evaluate_predictions.py  test_homogenize.py  test_mm_trainer.py  test_odelia_conversion.py  test_predict_entrypoint.py  test_prediction_pipeline.py  test_preview_da_entrypoint.py  test_splits.py  test_train_entrypoint.py  test_training_case_paths.py  test_training_cases_loading.py  test_training_registry.py
training/: __init__.py  callbacks.py  schedulers.py
