[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "meisenmeister"
version = "0.1.0"
description = "Meisenmeister utilities and CLI entrypoints."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "blosc2",
    "breastdivider",
    "dynamic_network_architectures",
    "numpy",
    "SimpleITK",
    "torch",
    "tqdm",
]

[project.scripts]
mm_extract_dataset_fingerprint = "meisenmeister.cli:mm_extract_dataset_fingerprint"
mm_create_breast_segmentations = "meisenmeister.cli:mm_create_breast_segmentations"
mm_homogenize = "meisenmeister.cli:mm_homogenize"
mm_plan_experment = "meisenmeister.cli:mm_plan_experment"
mm_preprocess = "meisenmeister.cli:mm_preprocess"
mm_plan_and_preprocess = "meisenmeister.cli:mm_plan_and_preprocess"
mm_create_5fold = "meisenmeister.cli:mm_create_5fold"
mm_train = "meisenmeister.cli:mm_train"
mm_benchmark_train = "meisenmeister.cli:mm_benchmark_train"
mm_predict = "meisenmeister.cli:mm_predict"
mm_predict_from_modelfolder = "meisenmeister.cli:mm_predict_from_modelfolder"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["meisenmeister*"]
